--- a/myweb/index.css
+++ b/myweb/index.css
@@ -10,7 +10,7 @@ body{
 		font-weight: bolder;
 		color: white;
 		position: absolute;
-		top: 13px;
+		top: 17px;
 		left: 15px;
 }
 .logo{
@@ -45,12 +45,6 @@ body{
 #div1{	
 		position: absolute;
 }
-div.a{
-		height: 400px;
-		width: 100%;
-		background-color:#BE3D15;
-		position: relative;
-}
 nav{
 		position: absolute;
 		right: 20px;
@@ -74,11 +68,27 @@ nav{
 ul.one{
 		list-style-type: none;
 }
+div.a{
+		height: 400px;
+		width: 100%;
+		background-color:#BE3D15;
+		position: relative;
+}
+.about{
+		border-width: 1px;
+		border-style: dashed;
+		border-radius: 10px;
+		padding-right: 50px;
+		height: 300px;
+		width: 450px;
+}
 .personal{
-			/*border:1px solid;*/
 			position: absolute;
-			right: 270px;
+			left: 550px;
 			top: 150px;
+}
+li.one{
+		margin-top: 5px;
 }
 .me{
 		position:absolute;
@@ -89,15 +99,12 @@ ul.one{
 		height: 280px;
 
 }
-#fontcolor{
-			color:#444651;
-}
-.school{
-		background-color: #FFF0DE;
-		position: absolute;
-		top: 500px;
-		width: 100%;
-		height: 300px;
+div.education{
+				background-color: #FFF0DE;
+				position: relative;
+				top: 530px;
+				width: 100%;
+				height: 300px;
 		
 }
 .schphoto{
@@ -109,31 +116,239 @@ ul.one{
 			margin-right: 60px;
 
 }
-.schphoto:hover{
-					background-color: #D8D3D3;		
-					color:#000000;
-}
-.schphoto:hover.commet{
-						opacity:1;
-}
 .edu{
 		position: absolute;
 		left:100px;
 		top: 13px;
 }
-.interest{
-		background-color: white;
-		position: absolute;
-		top: 800px;
-		width: 100%;
-		height: 300px;
-		
+div.interest{
+				background-color: white;
+				position: relative;
+				top: 520px;
+				width: 100%;
+				height: 500px;	
 }
 .int{
 		position: absolute;
 		left:100px;
 		top:13px;
+}
+.mic{
+		position: absolute;
+		width: 100px;
+		height: 100px;
+		left: 130px;
+		top:100px;
+}
+.mictext{
+			position: relative;
+			left: 260px;
+			top: 117px;
+}
+.food{
+		position: relative;
+		width: 100px;
+		height: 100px;
+		left:720px;
+		top: -15px;
+}
+.foodtext{
+			position: relative;
+			left:855px;
+			top: -125px;
+}
+.travel{
+			position: absolute;
+			width: 100px;
+			height: 100px;
+			left: 130px;
+			top: -65px;
+}
+.traveltext{
+				position: relative;
+				left: 260px;
+				top: -67px;
+}
+.cat{
+		position: relative;
+		width: 100px;
+		height: 100px;
+		left: 720px;
+		bottom: 180px;
+}
+.cattext{
+			position: relative;
+			left:855px;
+			bottom: 310px;
+}
+div.experience{
+				position: absolute;
+				width: 100%;
+				height: 600px;
+				top: 500px;
+				left: 0px;
+				background-color:#FFF0DE; 
+}
+.ex{
+		position: absolute;
+		left: 100px;
+		top:13px;
+}
+table.one{
+			width:100%;
+			margin-left: 100px;
+}
+div.table1{
+			position: absolute;
+			top:120px;
+}
+.hotim{	
+		width:270px;
+		height:180px;
+}
+.seven{
+		width: 150px;
+		height:150px;
+		margin-top: 60px;
+		margin-left: 50px;
 
 }
+.m{
+	width: 150px;
+	height: 150px;
+	margin-left: 50px;
+	margin-top: 60px;
+}
+div.goal{
+			position:relative;
+			top:1080px;
+			width: 100%;
+			height: 615px;
+}
+.goallogo{
+			position: absolute;
+			right: 200px;
+			top: 140px;
+			width: 170px;
+			height: 170px;
+}
+.gw{
+		position: absolute;
+		left: 100px;
+		top: 32px;
+}
+.g{
+	position: absolute;
+	left: 300px;
+	top: 120px;
+}
+.w{
+	position: absolute;
+	width: 650px;
+	top: 350px;
+	left: 300px;
+}
+div.table2{
+			position:absolute;
+			top: 100px;
+			left:30px;
+}
+table.two{
+			width: 90%;
+			margin-top: 30px;
+			margin-left:30px;
+}
+.li{
+			position: absolute;
+			left: 100px;
+			top:1800px;
 
-
+}
+div.life{
+			background-color:#FFF0DE; 
+			position: absolute;
+			top: 1070px;
+			width: 100%;
+			height: 600px;
+}
+.li{
+		position: absolute;
+		top: 15px;
+		left: 100px;
+}
+.l1{
+		position: relative;
+		width: 270px;
+		height: 180px;
+		margin-right: 20px;
+}
+.img_div {
+    
+    position: relative;
+    width: 531px;
+    height:  354px;
+}
+.mask01 {
+    position: absolute;
+    top:-50px;
+    left:-30px;
+    width: 200px;
+    height: 300px;
+    background: rgba(101, 101, 101, 0.6);
+    color: #ffffff;
+    opacity: 0;
+}
+.mask02 {
+    position: absolute;
+    top: -50px;
+    left: 200px;
+    width: 200px;
+    height: 300px;
+    background: rgba(101, 101, 101, 0.6);
+    color: #ffffff;
+    opacity: 0;
+}
+.mask03 {
+    position: absolute;
+    top: -50px;
+    left: 400px;
+    width: 200px;
+    height: 300px;
+    background: rgba(101, 101, 101, 0.6);
+    color: #ffffff;
+    opacity: 0;
+}
+.mask04 {
+    position: absolute;
+    top: -50px;
+    left: 615px;
+    width: 200px;
+    height: 300px;
+    background: rgba(101, 101, 101, 0.6);
+    color: #ffffff;
+    opacity: 0;
+}
+.mask01 h3 {
+    text-align: center;
+}
+.mask02 h3 {
+    text-align: center;
+}
+.mask03 h3 {
+    text-align: center;
+}
+.mask04 h3 {
+    text-align: center;
+}
+.img_div a:hover .mask01 {
+    opacity: 1;           
+}
+.img_div a:hover .mask02 {
+    opacity: 1;           
+}
+.img_div a:hover .mask03 {
+    opacity: 1;           
+}
+.img_div a:hover .mask04 {
+    opacity: 1;           
+}
