--- a/myweb/index.css
+++ b/myweb/index.css
@@ -354,7 +354,14 @@ div.life{
 }
 .foo{
 		position: absolute;
-		top:1000px;
+		top:3500px;
+		height: 50px;
 		width: 100%;
-		background-color:black;
+		background-color:#BE3D15;
+}
+.footext{
+			font-family: bolder;
+			color: white;
+			text-align: center;
+			line-height:50px;
 }
